--- a/src/fabric_interface/projects/templates/projects/project_detail.html
+++ b/src/fabric_interface/projects/templates/projects/project_detail.html
@@ -41,7 +41,7 @@
             </li>
         </ul>
     </div>
-    {% if user.is_staff %}
+    {% if request.user.is_superuser %}
         <!-- panel/users -->
         <div class="well well-sm">
             <ul class="nav nav-list">
