--- a/src/fabric_interface/templates/fabric_interface/users/user_form.html
+++ b/src/fabric_interface/templates/fabric_interface/users/user_form.html
@@ -20,11 +20,13 @@
                     </a>
                 </li>
             {% endfor %}
-            <li class="action">
-                <a href="{% url 'project_create' %}">
-                    <i class="glyphicon glyphicon-plus"></i> {% trans "Add project" %}
-                </a>
-            </li>
+            {% if perms.projects.add_project %}
+                <li class="action">
+                    <a href="{% url 'project_create' %}">
+                        <i class="glyphicon glyphicon-plus"></i> {% trans "Add project" %}
+                    </a>
+                </li>
+            {% endif %}
         </ul>
     </div>
     <!-- panel/hosts -->
