--- a/src/fabric_interface/stages/templates/stages/stage_detail.html
+++ b/src/fabric_interface/stages/templates/stages/stage_detail.html
@@ -1,6 +1,6 @@
 {% extends "fabric_interface/layouts/sidebar_double.html" %}
 
-{% load i18n bootstrap3 %}
+{% load i18n guardian_tags bootstrap3 %}
 
 {% block title %}{{ title }}{% endblock %}
 
@@ -10,9 +10,12 @@
         <ul class="nav nav-list">
             <li class="nav-header">{% trans "All projects" %}</li>
             {% for project in project_list %}
-                <li class="{% if project.slug == object.slug or project.slug == object.project.slug %}active{% endif %}">
-                    <a href="{% url 'project_detail' slug=project.slug %}">{{ project }}</a>
-                </li>
+                {% get_obj_perms request.user for project as "project_perms" %}
+                {% if "view_project" in project_perms or perms.projects.view_project %}
+                    <li class="{% if project.slug == object.slug or project.slug == object.project.slug %}active{% endif %}">
+                        <a href="{% url 'project_detail' slug=project.slug %}">{{ project }}</a>
+                    </li>
+                {% endif %}
             {% endfor %}
             {% if perms.projects.add_project %}
                 <li class="action">
