--- a/src/fabric_interface/templates/fabric_interface/home.html
+++ b/src/fabric_interface/templates/fabric_interface/home.html
@@ -33,15 +33,21 @@
         <ul class="nav nav-list">
             <li class="nav-header">{% trans "All hosts" %}</li>
             {% for host in host_list %}
-                <li><a href="{% url 'host_detail' slug=host.slug %}">{{ host }}</a></li>
-            {% empty %}
+                {% get_obj_perms request.user for host as "host_perms" %}
+                {% if "view_host" in project_perms or perms.hosts.view_host %}
+                    <li class="{% if host.slug == object.slug %}active{% endif %}">
+                        <a href="{% url 'host_detail' slug=host.slug %}">{{ host }}</a>
+                    </li>
+                {% endif %}            {% empty %}
                 <li>{% trans "No hosts found." %}</li>
             {% endfor %}
-            <li class="action">
-                <a href="{% url 'host_create' %}">
-                    <i class="glyphicon glyphicon-plus"></i> {% trans "Add host" %}
-                </a>
-            </li>
+            {% if perms.projects.add_project %}
+                <li class="action">
+                    <a href="{% url 'host_create' %}">
+                        <i class="glyphicon glyphicon-plus"></i> {% trans "Add host" %}
+                    </a>
+                </li>
+            {% endif %}
         </ul>
     </div>
     {% if request.user.is_superuser %}
