--- a/src/fabric_interface/templates/fabric_interface/home.html
+++ b/src/fabric_interface/templates/fabric_interface/home.html
@@ -5,68 +5,20 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block sidebar_left %}
-    <!-- panel/projects -->
-    <div class="well well-sm">
-        <ul class="nav nav-list">
-            <li class="nav-header">{% trans "All projects" %}</li>
-            {% for project in project_list %}
-                {% get_obj_perms request.user for project as "project_perms" %}
-                {% if "view_project" in project_perms or perms.projects.view_project %}
-                    <li class="{% if project.slug == object.slug %}active{% endif %}">
-                        <a href="{% url 'project_detail' slug=project.slug %}">{{ project }}</a>
-                    </li>
-                {% endif %}
-            {% empty %}
-                <li>{% trans "No projects found." %}</li>
-            {% endfor %}
-            {% if perms.projects.add_project %}
-                <li class="action">
-                    <a href="{% url 'project_create' %}">
-                        <i class="glyphicon glyphicon-plus"></i> {% trans "Add project" %}
-                    </a>
-                </li>
-            {% endif %}
-        </ul>
-    </div>
-    <!-- panel/hosts -->
-    <div class="well well-sm">
-        <ul class="nav nav-list">
-            <li class="nav-header">{% trans "All hosts" %}</li>
-            {% for host in host_list %}
-                {% get_obj_perms request.user for host as "host_perms" %}
-                {% if "view_host" in project_perms or perms.hosts.view_host %}
-                    <li class="{% if host.slug == object.slug %}active{% endif %}">
-                        <a href="{% url 'host_detail' slug=host.slug %}">{{ host }}</a>
-                    </li>
-                {% endif %}            {% empty %}
-                <li>{% trans "No hosts found." %}</li>
-            {% endfor %}
-            {% if perms.projects.add_project %}
-                <li class="action">
-                    <a href="{% url 'host_create' %}">
-                        <i class="glyphicon glyphicon-plus"></i> {% trans "Add host" %}
-                    </a>
-                </li>
-            {% endif %}
-        </ul>
-    </div>
-    {% if request.user.is_superuser %}
-        <!-- panel/users -->
-        <div class="well well-sm">
-            <ul class="nav nav-list">
-                <li class="nav-header">{% trans "Users" %}</li>
-                {% for user in user_list %}
-                    <li><a href="{% url 'user_detail' pk=user.pk %}">{{ user }}</a></li>
-                {% endfor %}
-                <li class="action"><a href="{% url 'user_create' %}"><i class="glyphicon glyphicon-plus"></i> {% trans "Add user" %}</a></li>
-            </ul>
-        </div>
-    {% endif %}
+    {% block panel_projects %}
+        {% include "fabric_interface/panels/panel_projects.html" with panel_label=_("All projects") %}
+    {% endblock %}
+    {% block panel_hosts %}
+        {% include "fabric_interface/panels/panel_hosts.html" with panel_label=_("All hosts") %}
+    {% endblock %}
+    {% block panel_users %}
+        {% include "fabric_interface/panels/panel_users.html" with panel_label=_("All users") %}
+    {% endblock %}
 {% endblock %}
 
 {% block content %}
     <div class="jumbotron">
-        <h1>Fabric Interface</h1>
-        <p>DTAP deployments made easy.</p>
+        <h1>{% trans "Fabric Interface" %}</h1>
+        <p>{% trans "DTAP deployments made easy." %}</p>
     </div>
 {% endblock %}
