--- a/src/fabric_interface/hosts/templates/hosts/host_detail.html
+++ b/src/fabric_interface/hosts/templates/hosts/host_detail.html
@@ -23,12 +23,7 @@
 {% endblock %}
 
 {% block sidebar_right %}
-    <!-- panel/danger_zone -->
-    <div class="well well-sm">
-        <ul class="nav nav-list">
-            <li class="nav-header">{% trans "Danger Zone" %}</li>
-            <li><a href="{% url 'host_update' slug=object.slug %}">{% trans "Edit" %}</a></li>
-            <li><a href="{% url 'host_delete' slug=object.slug %}">{% trans "Delete" %}</a></li>
-        </ul>
-    </div>
+    {% block panel_actions %}
+        {% include "fabric_interface/panels/panel_actions.html" with panel_label=_("Danger zone") %}
+    {% endblock %}
 {% endblock %}
