--- a/src/fabric_interface/projects/templates/projects/project_detail.html
+++ b/src/fabric_interface/projects/templates/projects/project_detail.html
@@ -25,24 +25,10 @@
 {% endblock %}
 
 {% block sidebar_right %}
-    <!-- panel/stages -->
-    <div class="well well-sm">
-        <ul class="nav nav-list">
-            <li class="nav-header">{% trans "Stages" %}</li>
-            {% for stage in object.stage_set.all %}
-                <li><a href="{% url 'project_stage_detail' slug=object.slug role_slug=stage.slug %}">{{ stage }}</a></li>
-            {% empty %}
-                <li>No stages.</li>
-            {% endfor %}
-            <li class="action"><a href="{% url 'project_stage_create' slug=object.slug %}"><i class="glyphicon glyphicon-plus"></i> {% trans "Add stage" %}</a></li>
-        </ul>
-    </div>
-    <!-- panel/danger_zone -->
-    <div class="well well-sm">
-        <ul class="nav nav-list">
-            <li class="nav-header">{% trans "Danger Zone" %}</li>
-            <li><a href="{% url 'project_update' slug=object.slug %}">{% trans "Edit" %}</a></li>
-            <li><a href="{% url 'project_delete' slug=object.slug %}">{% trans "Delete" %}</a></li>
-        </ul>
-    </div>
+    {% block panel_stages %}
+        {% include "fabric_interface/panels/panel_stages.html" with panel_label=_("All stages") %}
+    {% endblock %}
+    {% block panel_actions %}
+        {% include "fabric_interface/panels/panel_actions.html" with panel_label=_("Danger zone") %}
+    {% endblock %}
 {% endblock %}
