--- a/src/fabric_interface/stages/templates/stages/stage_detail.html
+++ b/src/fabric_interface/stages/templates/stages/stage_detail.html
@@ -22,31 +22,11 @@
     {{ object }} HOSTS={{ object.hosts.all }}
 {% endblock %}
 
-{% block sidebar_right %}
-    <!-- panel/stages -->
-    <div class="well well-sm">
-        <ul class="nav nav-list">
-            <li class="nav-header">{% trans "Stages" %}</li>
-            {% for stage in object.project.stage_set.all %}
-                <li class="{% if stage.slug == object.slug %}active{% endif %}">
-                    <a href="{% url 'project_stage_detail' slug=object.project.slug role_slug=stage.slug %}">{{ stage }}</a>
-                </li>
-            {% empty %}
-                <li>No stages.</li>
-            {% endfor %}
-            <li class="action">
-                <a href="{% url 'project_stage_create' slug=object.project.slug %}">
-                    <i class="glyphicon glyphicon-plus"></i> {% trans "Add stage" %}
-                </a>
-            </li>
-        </ul>
-    </div>
-    <!-- panel/danger_zone -->
-    <div class="well well-sm">
-        <ul class="nav nav-list">
-            <li class="nav-header">{% trans "Danger Zone" %}</li>
-            <li><a href="{% url 'project_stage_update' slug=object.project.slug role_slug=object.slug %}">{% trans "Edit" %}</a></li>
-            <li><a href="{% url 'project_stage_delete' slug=object.project.slug role_slug=object.slug %}">{% trans "Delete" %}</a></li>
-        </ul>
-    </div>
+{{% block sidebar_right %}
+    {% block panel_stages %}
+        {% include "fabric_interface/panels/panel_stages.html" with panel_label=_("All stages") %}
+    {% endblock %}
+    {% block panel_actions %}
+        {% include "fabric_interface/panels/panel_stage_actions.html" with panel_label=_("Danger zone") %}
+    {% endblock %}
 {% endblock %}
