--- a/src/fabric_interface/stages/templates/stages/stage_detail.html
+++ b/src/fabric_interface/stages/templates/stages/stage_detail.html
@@ -22,7 +22,7 @@
     {{ object }} HOSTS={{ object.hosts.all }}
 {% endblock %}
 
-{{% block sidebar_right %}
+{% block sidebar_right %}
     {% block panel_stages %}
         {% include "fabric_interface/panels/panel_stages.html" with panel_label=_("All stages") %}
     {% endblock %}
