--- a/src/fabric_interface/stages/templates/stages/stage_form.html
+++ b/src/fabric_interface/stages/templates/stages/stage_form.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block content %}
-    <h4>{% if object %}{% trans "Edit stage" %}{% else %}{% trans "Add stage" %}{% endif %}</h4>
+    <h4>{% if action == 'edit' %}{% trans "Edit stage" %}{% else %}{% trans "Add stage" %}{% endif %}</h4>
     <hr />
     <form method="post" role="form">
         {% csrf_token %}
@@ -44,4 +44,10 @@
             {% endif %}
         {% endbuttons %}
     </form>
+{% endblock %}
+
+{% block sidebar_right %}
+    {% block panel_stages %}
+        {% include "fabric_interface/panels/panel_stages.html" with panel_label=_("All stages") %}
+    {% endblock %}
 {% endblock %}
