--- a/src/fabric_interface/templates/fabric_interface/base.html
+++ b/src/fabric_interface/templates/fabric_interface/base.html
@@ -33,6 +33,7 @@
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script src="{% static 'fabric_interface/js/i18n.js' %}"></script>
         {% bootstrap_javascript %}
         {% block extrajs %}{% endblock %}
     </body>
