--- a/src/fabric_interface/templates/fabric_interface/footer.html
+++ b/src/fabric_interface/templates/fabric_interface/footer.html
@@ -5,8 +5,9 @@
 {% if show_credits %}
     <footer style="margin:100px 0;">
         <div class="container">
-            Created by <a href="http://heddevanderheide.nl" target="_blank">Hedde van der Heide</a> 2014<br>
-            <span class="text-muted">Icons by <a href="http://glyphicons.com/">Glyphicons</a> | Powered by <a href="http://bootswatch.com/">Bootstrap</a></span>
+            <a href="https://raw.githubusercontent.com/Hedde/fabric_interface/develop/LICENSE" target="_blank">MIT</a>
+            &HorizontalLine; Created by <a href="http://heddevanderheide.nl" target="_blank">Hedde van der Heide</a> &copy; 2014<br>
+            <span class="text-muted">Icons by <a href="http://glyphicons.com/" target="_blank">Glyphicons</a> | Powered by <a href="https://www.djangoproject.com/" target="_blank">Django</a> & <a href="http://bootswatch.com/" target="_blank">Bootstrap</a></span>
         </div>
     </footer>
 {% endif %}
