--- a/src/fabric_interface/templates/fabric_interface/navigation.html
+++ b/src/fabric_interface/templates/fabric_interface/navigation.html
@@ -14,8 +14,8 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="{% url 'test' %}">
-                        {% trans "Playground" %}
+                    <a href="{% url 'formula_index' %}">
+                        {% trans "Formulae" %}
                     </a>
                 </li>
             </ul>
