--- a/src/fabric_interface/templates/fabric_interface/navigation.html
+++ b/src/fabric_interface/templates/fabric_interface/navigation.html
@@ -42,7 +42,7 @@
                             {{ user.get_full_name }} <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">{% trans "Edit profile" %}</a></li>
+                            <li><a href="{% url 'user_profile' pk=user.pk %}">{% trans "Edit profile" %}</a></li>
                             <li class="divider"></li>
                             <li><a href="{% url 'logout' %}">{% trans "Logout" %}</a></li>
                         </ul>
