--- a/src/fabric_interface/templates/fabric_interface/footer.html
+++ b/src/fabric_interface/templates/fabric_interface/footer.html
@@ -7,7 +7,7 @@
         <div class="container">
             <a href="https://raw.githubusercontent.com/Hedde/fabric_interface/develop/LICENSE" target="_blank">MIT</a>
             &HorizontalLine; Created by <a href="http://heddevanderheide.nl" target="_blank">Hedde van der Heide</a> &copy; 2014<br>
-            <span class="text-muted">Icons by <a href="http://glyphicons.com/" target="_blank">Glyphicons</a> | Powered by <a href="https://www.djangoproject.com/" target="_blank">Django</a> & <a href="http://bootswatch.com/" target="_blank">Bootstrap</a></span>
+            <span class="text-muted">Icons by <a href="http://glyphicons.com/" target="_blank">Glyphicons</a> | Powered by <a href="https://www.djangoproject.com/" target="_blank">Django</a> & <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></span>
         </div>
     </footer>
 {% endif %}
