--- a/src/bootstrapper/less/theme.less
+++ b/src/bootstrapper/less/theme.less
@@ -216,8 +216,15 @@
 // --------------------------------------------------
 
 // Common styles
+//.panel {
+//  .box-shadow(0 1px 2px rgba(0,0,0,.05));
+//}
 .panel {
-  .box-shadow(0 1px 2px rgba(0,0,0,.05));
+  box-shadow: none;
+}
+
+.panel-default > .panel-heading {
+  padding: 4px 0;
 }
 
 // Mixin for generating new styles
@@ -256,7 +263,7 @@
 .nav-header {
   display: block;
   padding: 3px 15px;
-  font-size: 11px;
+  font-size: @font-size-base - 3;
   font-weight: bold;
   line-height: @line-height-small;
   color: @gray-light;
@@ -280,7 +287,7 @@
   text-shadow: 0 1px 0 rgba(255,255,255,.5);
 }
 .nav-list > li > a {
-  font-size: 12px;
+  font-size: @font-size-base - 2;
   font-weight: bold;
   padding: 3px 15px;
   text-transform: uppercase;
@@ -299,7 +306,7 @@
 }
 .nav-list [class^="glyphicon-"],
 .nav-list [class*=" glyphicon-"] {
-  font-size: 10px;
+  font-size: @font-size-base - 4;
   margin-right: 2px;
   top: 0;
 }
@@ -322,6 +329,23 @@
 
 
 //
+// Tables
+// --------------------------------------------------
+.table {
+  tr {
+    th {
+      a {
+        text-transform: uppercase;
+      }
+    }
+    th, td {
+      font-size: @font-size-base - 2;
+    }
+  }
+}
+
+
+//
 // No radius
 // --------------------------------------------------
 .form-control {
@@ -331,5 +355,11 @@
   border-radius: 0;
 }
 .container .jumbotron {
+  border-radius: 0;
+}
+.panel {
+  border-radius: 0;
+}
+.panel-default > .panel-heading {
   border-radius: 0;
 }
