--- a/src/fabric_interface/projects/templates/projects/project_detail.html
+++ b/src/fabric_interface/projects/templates/projects/project_detail.html
@@ -1,6 +1,7 @@
 {% extends "fabric_interface/layouts/sidebar_double.html" %}
 
 {% load i18n guardian_tags bootstrap3 %}
+{% load render_table from django_tables2 %}
 
 {% block title %}{{ title }}{% endblock %}
 
@@ -20,7 +21,37 @@
     <h4>{% trans "Project" %} '{{ project }}'</h4>
     <hr />
     <div class="row">
-        <div class="col-md-12">{{ object }} SLUG={{ object.slug }} STAGES={{ object.stage_set.all }}</div>
+        <div class="col-md-12">{{ object }} SLUG={{ object.slug }}</div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <span class="nav-header">{% trans "Stages" %}</span>
+                </div>
+                <div class="panel-body">
+                    {% with object.stage_set.all as stages %}
+                        {% if stages %}
+                            {% render_table stages "fabric_interface/tables/bootstrap.html" %}
+                        {% else %}
+                            No stages found.
+                        {% endif %}
+                    {% endwith %}
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <span class="nav-header">{% trans "Configurations" %}</span>
+                </div>
+                <div class="panel-body">
+                    {% render_table configurations "fabric_interface/tables/bootstrap.html" %}
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
 
