--- a/src/static/css/bootstrap-theme.css
+++ b/src/static/css/bootstrap-theme.css
@@ -364,8 +364,11 @@
 }
 .panel
 {
-    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
-            box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
+    box-shadow: none;
+}
+.panel-default > .panel-heading
+{
+    padding: 4px 0;
 }
 .panel-default > .panel-heading
 {
@@ -429,7 +432,7 @@
 }
 .nav-header
 {
-    font-size: 11px;
+    font-size: 14px - 3;
     font-weight: bold;
     line-height: 1.5;
 
@@ -462,7 +465,7 @@
 }
 .nav-list > li > a
 {
-    font-size: 12px;
+    font-size: 14px - 2;
     font-weight: bold;
 
     padding: 3px 15px;
@@ -486,7 +489,7 @@
 .nav-list [class^='glyphicon-'],
 .nav-list [class*=' glyphicon-']
 {
-    font-size: 10px;
+    font-size: 14px - 4;
 
     top: 0;
 
@@ -514,6 +517,15 @@
 
     background-color: #e5e5e5;
 }
+.table tr th a
+{
+    text-transform: uppercase;
+}
+.table tr th,
+.table tr td
+{
+    font-size: 14px - 2;
+}
 .form-control
 {
     border-radius: 0;
@@ -523,6 +535,14 @@
     border-radius: 0;
 }
 .container .jumbotron
+{
+    border-radius: 0;
+}
+.panel
+{
+    border-radius: 0;
+}
+.panel-default > .panel-heading
 {
     border-radius: 0;
 }
