--- a/src/fabric_interface/projects/templates/projects/project_detail.html
+++ b/src/fabric_interface/projects/templates/projects/project_detail.html
@@ -35,7 +35,7 @@
                     {% if configurations %}
                         {% render_table configurations %}
                     {% else %}
-                        No stages found.
+                        No configurations found.
                     {% endif %}
                 </div>
             </div>
